--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,17 @@
 				</plugin>
 				<plugin>
 					<artifactId>maven-jar-plugin</artifactId>
-					<version>3.0.2</version>
+					<version>3.1.2</version>
+					    <configuration>
+        <archive>
+            <manifest>
+                <packageName>com.pulkit.TEST</packageName>
+            </manifest>
+            <manifestEntries>
+                <Created-By>Pulkit Chandra</Created-By>
+            </manifestEntries>
+        </archive>
+    </configuration>
 				</plugin>
 				<plugin>
 					<artifactId>maven-install-plugin</artifactId>
