--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
 				<plugin>
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-maven-plugin</artifactId>
+					<version>2.0.3.RELEASE</version>
 					<configuration>
 						<mainClass>com.pulkit.TEST.App</mainClass>
 					</configuration>
@@ -82,18 +83,18 @@
 				<plugin>
 					<artifactId>maven-jar-plugin</artifactId>
 					<version>3.1.2</version>
-					    <configuration>
-        <archive>
-            <manifest>
-                <addClasspath>true</addClasspath>
-            <classpathPrefix>lib/</classpathPrefix>
-            <mainClass>com.pulkit.TEST.App</mainClass>
-            </manifest>
-            <manifestEntries>
-                <Created-By>Pulkit Chandra</Created-By>
-            </manifestEntries>
-        </archive>
-    </configuration>
+					<configuration>
+						<archive>
+							<manifest>
+								<addClasspath>true</addClasspath>
+								<classpathPrefix>lib/</classpathPrefix>
+								<mainClass>com.pulkit.TEST.App</mainClass>
+							</manifest>
+							<manifestEntries>
+								<Created-By>Pulkit Chandra</Created-By>
+							</manifestEntries>
+						</archive>
+					</configuration>
 				</plugin>
 				<plugin>
 					<artifactId>maven-install-plugin</artifactId>
